collapse button issues fixed.

--- a/invoice-frontend/src/app/pages/components/invoice/invoice-form/invoice-form.component.scss
+++ b/invoice-frontend/src/app/pages/components/invoice/invoice-form/invoice-form.component.scss
@@ -216,8 +216,9 @@ b {
     width: 450px;
 }
 
-::ng-deep .flux-content-section[navbar-type="collapsed"][effect-type="shrink"] {
-    margin-left: 1px !important;
+// collapsed problem
+.flux-content-section[navbar-type="collapsed"][effect-type="shrink"] {
+    margin-left: unset !important;
 }
 
 ::ng-deep .flux-content-section[navbar-type="expanded"][effect-type="push"] {
